--- a/GDCatalog/.project
+++ b/GDCatalog/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GDCatalog</name>
+	<name>com.cyrilmottier.android.greendroid.GDCatalog</name>
 	<comment></comment>
 	<projects>
 	</projects>
